[package]
name = "rueue"
version = "0.1.0"
edition = "2021"
authors = ["odd <odd12258053@gmail.com>"]
description = "..."
license = "MIT"
readme = "README.md"
repository = "https://github.com/odd12258053/rueue"
keywords = ["queue"]
categories = ["data-structures", "queue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
